--- a/html/landing.html
+++ b/html/landing.html
@@ -16,7 +16,7 @@
 	</nav>
 	<div class = "h-derecha">
 		<input type="text" id="barraBuscarProd" placeholder="Buscar Producto">
-		<a href="#"> Iniciar sesión</a>
+		<a href="login.html"> Iniciar sesión</a>
 	</div>
 </header> 
 
@@ -38,17 +38,17 @@
 
   <!-- Sección de categorías -->
   <section class="categorias">
-    <div class="categoria">
+    <div class="card">
       <div class="img-placeholder"></div>
-      <p>Producto</p>
+      <h2>Productos</h2>
     </div>
-    <div class="categoria">
+    <div class="card">
       <div class="img-placeholder"></div>
-      <p>Paquetes</p>
+      <h2>Paquetes</h2>
     </div>
-    <div class="categoria">
+    <div class="card">
       <div class="img-placeholder"></div>
-      <p>Ofertas</p>
+      <h2>Ofertas</h2>
     </div>
   </section>
 
