Refactor common layout styles to commons.css
Moved shared navbar, footer, and layout CSS from landing.css and login.css into a new commons.css file. Updated HTML files to include commons.css for consistent styling and easier maintenance.

--- a/frontend/catalogo_de_productos.html
+++ b/frontend/catalogo_de_productos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="css/landing.css">
+  <link rel="stylesheet" href="css/commons.css">
   <title>Catálogo de productos</title>
   <!-- Fondo con blobs (#F2AE30, #F24F13) -->
   <link rel="stylesheet" href="css/estilo_blobs.css">
