--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,6 +3,7 @@
 <head>
   	<title>Mi Página</title>
   	<link rel="stylesheet" href="css/login.css">
+	<link rel="stylesheet" href="css/commons.css">
 </head>
 
 <header class = "navbar">
