--- a/frontend/wip.html
+++ b/frontend/wip.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-  <title>Mi Página</title>
-  <link rel="stylesheet" href="css/login.css">
+	<title>Mi Página</title>
+	<link rel="stylesheet" href="css/login.css">
+	<link rel="stylesheet" href="css/commons.css">
 </head>
 
 <header class = "navbar">
