--- a/frontend/landing.html
+++ b/frontend/landing.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tienda</title>
   <link rel="stylesheet" href="css/landing.css">
+  <link rel="stylesheet" href="css/commons.css">
 </head>
 
 <header class = "navbar">
